--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently vite \"node server.js\"",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "concurrently \"npm run dev\" \"node server.js\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
